--- a/.env_example
+++ b/.env_example
@@ -1,3 +1,5 @@
+DATA_FOLDER=/<directory-path>/n8n
+
 DB_TYPE= postgresdb
 DB_POSTGRESDB_HOST=postgres
 DB_POSTGRESDB_PORT=5432
@@ -25,3 +27,5 @@ POSTGRES_NON_ROOT_PASSWORD=Nza67RMochvEI1c
 NODE_FUNCTION_ALLOW_BUILTIN=*
 #EXTRA_NODE_MODULES=node-telegram-bot-api,axios
 NODE_FUNCTION_ALLOW_EXTERNAL=*
+# The email address to use for the SSL certificate creation
+SSL_EMAIL=example@example.com
