--- a/.env_example
+++ b/.env_example
@@ -1,21 +1,13 @@
-DATA_FOLDER=/<directory-path>/n8n
-
-DB_TYPE= postgresdb
-DB_POSTGRESDB_HOST=postgres
-DB_POSTGRESDB_PORT=5432
-DB_POSTGRESDB_DATABASE=${POSTGRES_DB}
-DB_POSTGRESDB_USER=${POSTGRES_NON_ROOT_USER}
-DB_POSTGRESDB_PASSWORD=${POSTGRES_NON_ROOT_PASSWORD}
 EXECUTIONS_MODE=regular
 QUEUE_BULL_REDIS_HOST=redis
 QUEUE_HEALTH_CHECK_ACTIVE=True
 N8N_PERSONALIZATION_ENABLED=False
 N8N_DEFAULT_BINARY_DATA_MODE=filesystem
-N8N_HOST=telidinbeg.beget.app
+N8N_HOST=n8n.alimuradov.ru
 N8N_PORT=5678
 N8N_PROTOCOL=https
 N8N_ENCRYPTION_KEY=24258aab-dd43-55a6-836d-cf8ef8ca86f0
-WEBHOOK_URL=https://telidinbeg.beget.app/
+WEBHOOK_URL=https://n8n.alimuradov.ru/
 NODE_ENV=production
 GENERIC_TIMEZONE=Europe/Moscow
 TZ=Europe/Moscow
@@ -23,9 +15,19 @@ POSTGRES_USER=root
 POSTGRES_PASSWORD=Nza67RMochvEI1c
 POSTGRES_DB=n8n
 POSTGRES_NON_ROOT_USER=user
-POSTGRES_NON_ROOT_PASSWORD=Nza67RMochvEI1c
+POSTGRES_NON_ROOT_PASSWORD=Nza51RMochvEI1c
 NODE_FUNCTION_ALLOW_BUILTIN=*
-#EXTRA_NODE_MODULES=node-telegram-bot-api,axios
+EXTRA_NODE_MODULES=openai
 NODE_FUNCTION_ALLOW_EXTERNAL=*
+
+
+DB_TYPE= postgresdb
+DB_POSTGRESDB_HOST=postgres
+DB_POSTGRESDB_PORT=5432
+DB_POSTGRESDB_DATABASE=${POSTGRES_DB}
+DB_POSTGRESDB_USER=${POSTGRES_NON_ROOT_USER}
+DB_POSTGRESDB_PASSWORD=${POSTGRES_NON_ROOT_PASSWORD}
+
+DATA_FOLDER=/home/nariman/dev/n8n
 # The email address to use for the SSL certificate creation
-SSL_EMAIL=example@example.com
+SSL_EMAIL=tabarigen@mail.ru
